[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rockethook"
version = "1.0.4"
description = "Simple library for posting to Rocket.Chat via webhooks a.k.a. integrations."
readme = "README.rst"
license = { text = "MIT" }
authors = [{ name = "Gennadii Aleksandrov", email = "gevial@yahoo.com" }]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/gevial/rockethook"
